OPA voter example added.
- Readme file updated accordingly.
- Swagger enabled, and Swagger API documentation example added to controller.